--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -1,12 +1,96 @@
 .cover{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 100%;
     height: 100vh;
     background: linear-gradient(90deg, #09090A 0%, #181719 47.57%, #36343B 126.85%, #39363D 126.85%);
-    
 }
-.col {
+.cover .col {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.cover .info{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.cover .col .logo{
+    display: flex;
+    align-self: flex-start;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 2% 0;
+    margin-bottom: 15%;
+}
+.cover .col .title{
     display: flex;
     flex-direction: column;
+    margin-bottom: 5%;
+    color: #FFF;
+    font-family: Roboto Condensed;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: bolder;
+}
+
+.cover .col .title h1{
+    margin: 7% 0;
+
+}
+.cover .col .title h2{
+    color:  #8D8D99;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 400;
+    margin-bottom: 5%;
+
+
+}
+.cover .col .tag{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-start;
+    border-radius: 50px;
+    background:  #202024;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.15), 0px 4px 8px 0px rgba(0, 0, 0, 0.15), 0px 14px 14px 0px rgba(0, 0, 0, 0.13), 0px 32px 19px 0px rgba(0, 0, 0, 0.08), 0px 57px 23px 0px rgba(0, 0, 0, 0.02), 0px 89px 25px 0px rgba(0, 0, 0, 0.00);
+    padding: 3% 7%;
+    align-items: center;
+    margin: 5% 0;
+}
+.cover .col .tag p{
+    color: #C6ADFF;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+    
+}
+
+.image-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+}
+
+.image-bottom {
+    position: absolute;
+    top: 10;
+    left: 11;
+    opacity: 0.5;
 }
