--- a/#3 - Botões e cursores/assets/css/style.css
+++ b/#3 - Botões e cursores/assets/css/style.css
@@ -6,9 +6,15 @@
 
 }
 
-
+main{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0 auto;
+}
 .left{
     background-color: var(--background-primary);
+    flex: 1;
 }
 .table{
     display: flex;
@@ -18,29 +24,57 @@
 .th{
     display: flex;
     flex-direction: row;
+    width: 100%;
+    /* height: 64px; */
+    /* padding: 14px 0; */
+    align-items: center;
+    border: solid red;
+    /* gap: 5%; */
+    align-self: flex-end;
 }
 
 .txt-top{
     color: var(--text-color-primary);
+    /* margin: 1% 15%; */
+    border: solid wheat;
 }
 
 .tb{
     display: flex;
     flex-direction: row;
+    /* justify-content: space-between; */
 }
 
 .col-left{
     background-color: var(--background-secondary);
+    border: solid forestgreen;
+    flex: 1;
 }
 
 .col-rigth{
     display: flex;
     flex-direction: column;
+    border: solid orange;
+    flex: 1;
+
 }
 
 .row{
     display: flex;
     flex-direction: row;
+    margin: 2% 0;
+    flex: 1;
+    border: dashed blue;
+
+}
+button{
+    display: flex;
+    padding: 12px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 24px;
+    background: #8257E5;
 }
 
 .text{
@@ -56,7 +90,7 @@
 }
 
 .rigth{
-
+    /* flex: 35%; */
 }
 .menu-icon{
 
